Avoid content flowing out of main site borders on mobile

--- a/public/resources/all.css
+++ b/public/resources/all.css
@@ -105,6 +105,8 @@ th, td {
 #main {
 	margin: 0;
 	padding: 0;
+	width: 100%;
+	overflow-x: scroll;
 }
 
 #main article {
